--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -26,15 +26,22 @@
                 <h4>BarberShop Admin</h4>
             </div>
             <div class="list-group list-group-flush">
-                <a href="@Url.Action("Index", "Admin")" class="list-group-item list-group-item-action bg-dark text-white">
+                <a href="@Url.Action("Index", "Admin")" class="list-group-item list-group-item-action bg-dark text-white my-2">
                     <i class="fas fa-chart-line"></i> Dashboards
                 </a>
-                <a href="@Url.Action("Index", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                <a href="@Url.Action("Index", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white my-2">
                     <i class="fas fa-user-friends"></i> Barbeiros
                 </a>
-                <a href="@Url.Action("Index", "Servico")" class="list-group-item list-group-item-action bg-dark text-white">
+                <a href="@Url.Action("Index", "Servico")" class="list-group-item list-group-item-action bg-dark text-white my-2">
                     <i class="fas fa-cut"></i> Serviços
                 </a>
+                <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();" class="list-group-item list-group-item-action bg-dark text-white my-2">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                </a>
+                <!-- Formulário oculto para o logout -->
+                <form id="logout-form" action="@Url.Action("Logout", "Login")" method="post" style="display: none;">
+                    @Html.AntiForgeryToken()
+                </form>
             </div>
         </div>
 
