--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -36,6 +36,8 @@
         </main>
     </div>
 
+    <div id="toastContainer" class="position-fixed top-0 end-0 p-3" style="z-index: 1100"></div>
+
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
@@ -53,6 +55,12 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
     <script>
         dayjs.locale('pt-br');
+    </script>
+
+    <!-- Stripe.js - Inclua o Stripe com a chave pública -->
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+        const stripe = Stripe("pk_test_51QFMA5Hl3zYZjP9p3D5NFqiiQLD6P2G5175ZnhLFAf1KyIgQcNmnfJqBI7WHEkgInCDEMQoMcxeWEMPLN5sfnjIi00VLPKatjn");
     </script>
 
     <!-- Custom JS -->
